--- a/DrakiaXYZ-TaskListFixes.csproj
+++ b/DrakiaXYZ-TaskListFixes.csproj
@@ -66,7 +66,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DrakiaXYZTaskListFixesPlugin.cs" />
+    <Compile Include="Settings.cs" />
+    <Compile Include="TaskListFixesPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
