--- a/DrakiaXYZ-TaskListFixes.csproj
+++ b/DrakiaXYZ-TaskListFixes.csproj
@@ -77,15 +77,14 @@
     <Compile Include="Settings.cs" />
     <Compile Include="TaskListFixesPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VersionChecker\TarkovVersion.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="LICENSE" />
-    <None Include="VersionChecker\setbuild.ps1" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PreBuildEvent>powershell.exe -ExecutionPolicy Bypass -NoProfile -NonInteractive -File $(ProjectDir)\VersionChecker\setbuild.ps1</PreBuildEvent>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PostBuildEvent>copy "$(TargetPath)" "$(ProjectDir)\..\..\BepInEx\plugins\$(TargetFileName)"</PostBuildEvent>
